[package]
name = "oasis"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_egui = { version = "0.30.0" }
mint = { version = "0.5.9" }
rand = { version = "0.8.5", features = [] }
rand_pcg = "0.3.1"
doryen-fov = { version = "0.1.1" }
pathfinding = { version = "4.11.0" }
basic = { path = "./crates/basic" }

[workspace]
members = ["crates/*"]

[workspace.dependencies]
bevy = { version = "0.14.1" }