[package]
name = "oasis"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy_egui = { version = "0.33.0" }
rand = { version = "0.9.0", features = [] }
doryen-fov = { version = "0.1.1" }
pathfinding = { version = "4.14.0" }
basic = { path = "./crates/basic" }

[workspace]
members = ["crates/*"]

[workspace.dependencies]
bevy = { version = "0.15.3" }